WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162359
[macOS] Upon layout, _webView:renderingProgressDidChange: fires before the intrinsic content size is updated
https://bugs.webkit.org/show_bug.cgi?id=162359
Summary
[macOS] Upon layout, _webView:renderingProgressDidChange: fires before the in...
mitz
Reported
2016-09-21 14:05:38 PDT
<
rdar://problem/27776454
> On macOS, when a layout milestone is reported to the navigation delegate, it is before the WKWebView’s intrinsic size had a chance to update to reflect the new layout.
Attachments
Defer sending layout milestones to flushLayers()
(7.19 KB, patch)
2016-09-21 20:16 PDT
,
mitz
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(947.62 KB, application/zip)
2016-09-21 21:39 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2016-09-21 20:16:06 PDT
Created
attachment 289509
[details]
Defer sending layout milestones to flushLayers()
WebKit Commit Bot
Comment 2
2016-09-21 20:17:58 PDT
Attachment 289509
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/AutoLayoutIntegration.mm:163: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/AutoLayoutIntegration.mm:167: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3
2016-09-21 21:39:33 PDT
Comment on
attachment 289509
[details]
Defer sending layout milestones to flushLayers()
Attachment 289509
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2122849
New failing tests: fast/images/mask-box-image-crash.html
Build Bot
Comment 4
2016-09-21 21:39:37 PDT
Created
attachment 289518
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Tim Horton
Comment 5
2016-09-21 21:59:37 PDT
Comment on
attachment 289509
[details]
Defer sending layout milestones to flushLayers() View in context:
https://bugs.webkit.org/attachment.cgi?id=289509&action=review
> Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.h:166 > + WebCore::LayoutMilestones m_pendingNewlyReachedLayoutMilestones { 0 };
😳
mitz
Comment 6
2016-09-21 22:05:27 PDT
Fixed in <
https://trac.webkit.org/r206247
>.
mitz
Comment 7
2016-11-02 14:02:29 PDT
(In reply to
comment #6
)
> Fixed in <
https://trac.webkit.org/r206247
>.
This caused
bug 164340
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug