[macOS] Upon layout, _webView:renderingProgressDidChange: fires before the intrinsic content size is updated https://bugs.webkit.org/show_bug.cgi?id=162359 <rdar://problem/27776454>

Reviewed by Tim Horton.

Source/WebKit2:

Test: added to TestWebKitAPI/Tests/WebKit2Cocoa/AutoLayoutIntegration.mm

* WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.h: Fixed a bug where
  m_pendingNewlyReachedLayoutMilestones was never initialized.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h: Added
  m_pendingNewlyReachedLayoutMilestones member variable to this derived class as well.
* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::flushLayers): If we have pending milestones, notify
  the WebPageProxy now, after any content size changes have been sent.
(WebKit::TiledCoreAnimationDrawingArea::dispatchDidReachLayoutMilestone): New override that
  accumulates the milestones into m_pendingNewlyReachedLayoutMilestones and returns true,
  so that the caller won’t notify the WebPageProxy immediately.

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/AutoLayoutIntegration.mm:
(TEST):



Canonical link: https://commits.webkit.org/180393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206247 268f45cc-cd09-0410-ab3c-d52691b4dbfc